--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
 <header>
+<div class="row">
 	<nav>
+	<div class="row">
 		<div class="container">
 				<div class="logo"><a href="#">iMARRIED</a></div>
 				<menu>
@@ -56,16 +58,42 @@
 						<a href="#"><img src="img/people/user1.jpg" alt=""></a>
 					</li>
 					<menu>
-						<li><a href=""><i class="flaticon-chat-37"></i>Мой профиль</a></li>
-						<li><a href=""><i class="flaticon-chat-37"></i>Редактировать мой профиль</a></li>
+						<li><a href=""><i class="flaticon-user"></i>Мой профиль</a></li>
+						<li><a href=""><i class="flaticon-pen-edit"></i>Редактировать мой профиль</a></li>
 						<li><a href=""><i class="flaticon-chat-37"></i>Загрузить фото</a></li>
 						<li><a href=""><i class="flaticon-chat-37"></i>Сообщения</a></li>
-						<li><a href=""><i class="flaticon-chat-37"></i>Платные услуги</a></li>
+						<li class="ping"><a href=""><i class="flaticon-diamond-1"></i>Платные услуги</a></li>
 						<li><a href=""><i class="flaticon-chat-37"></i>Выйти</a></li>
 				</menu>
 				</ul>
 		</div>
+	</div>
 	</nav>
+	</div>
+	<div class="col-head">
+<div class="col-header">
+	<div class="lovers">
+	<div class="container">
+		<h2>Для влюблённых пар</h2>
+		<p>На сайте wedding.com вы можете выбрать свадебных агентов, более чем из 1000 свадебных фотографов и 200 свадебных видеографов, ведущих с разных городов:</p>
+		<input type="text" placeholder="Ищу фотографа">
+		<input type="text" placeholder="В Минске">
+		<button class="btn ping">ПОИСК</button>
+		<p>Если устали искать, то зарегистрируйтень на сайте в 2 клика и куча предложений от фотографов, видеографов , свадебных агенств и ведущих напишут Вам сами!</p>
+		</div>
+	</div>
+</div>
+<div class="col-header">
+	<div class="invitation">
+		<div class="container">
+			<h2>Для фотографов, видеографов, свадебных агенств, ведущих</h2>
+			<p>На сайте wedding.com Вы можете бесплатно разместить своё портфолио, указать контактную информацию и цены для влюблённых пар, сопоставить свой уровень с коллегами, пообщаться на форуме или с зарегистрированными парами.</p>
+			<button class="ping">Войти</button>
+			<button class="ping">Зарегестрироваться</button>
+		</div>
+	</div>
+</div>
+</div>
 </header>
 </body>
 </html>
