--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 	<title style="background: black">iMARRIED | Главная</title>
 	<link rel="stylesheet" href="css/icon/flaticon-icon.css">
 	<link rel="stylesheet" href="css/message/flaticon.css">
+	<link rel="stylesheet" href="css/arrow/flaticon.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/slick-theme.css">
+		<link rel="stylesheet" href="css/slick.css">
 </head>
 <body>
 <header>
@@ -57,6 +60,7 @@
 					<li>
 						<a href="#"><img src="img/people/user1.jpg" alt=""></a>
 					</li>
+<!--
 					<menu>
 						<li><a href=""><i class="flaticon-user"></i>Мой профиль</a></li>
 						<li><a href=""><i class="flaticon-pen-edit"></i>Редактировать мой профиль</a></li>
@@ -65,6 +69,7 @@
 						<li class="ping"><a href=""><i class="flaticon-diamond-1"></i>Платные услуги</a></li>
 						<li><a href=""><i class="flaticon-chat-37"></i>Выйти</a></li>
 				</menu>
+-->
 				</ul>
 		</div>
 	</div>
@@ -95,5 +100,21 @@
 </div>
 </div>
 </header>
+<div class="class1">
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, id.</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, id.</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, id.</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, id.</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, id.</p>
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="js/slick.min.js"></script>
+<script>
+$(document).ready(function(){
+  $('.class1').slick({
+	dots:true
+  });
+});
+</script>
 </body>
 </html>
