--- a/index.html
+++ b/index.html
@@ -61,16 +61,17 @@
 					<li>
 						<a href="#"><img src="img/people/user1.jpg" alt=""></a>
 					</li>
-<!--
+<!--Открытое меню-->
 					<menu>
+
 						<li><a href=""><i class="flaticon-user"></i>Мой профиль</a></li>
 						<li><a href=""><i class="flaticon-pen-edit"></i>Редактировать мой профиль</a></li>
 						<li><a href=""><i class="flaticon-chat-37"></i>Загрузить фото</a></li>
 						<li><a href=""><i class="flaticon-chat-37"></i>Сообщения</a></li>
 						<li class="ping"><a href=""><i class="flaticon-diamond-1"></i>Платные услуги</a></li>
 						<li><a href=""><i class="flaticon-chat-37"></i>Выйти</a></li>
+
 				</menu>
--->
 				</ul>
 		</div>
 	</div>
@@ -101,9 +102,10 @@
 </div>
 </div>
 </header>
+<!--Slider-->
 <div class="slider">
 	<div class="container">
-		<h2>Свадебные фотографы</h2>
+		<h2>Фотографы</h2>
 		<div class="slider-run">
 			<div class="user">
 			<div class="images">
@@ -216,68 +218,205 @@
 		</div>
 	</div>
 </div>
-<div class="slider-run container">
+<!--Slider End-->
+<!--Photo Day-->
+<div class="top-work">
+	<div class="container">
+		<div class="work">
+			<h2>ФОТО недели</h2>
+			<div class="images">
+				<img src="img/Rectangle%203.1.jpg" alt="">
+			</div>
+			<div class="footer-work">
+			<a href="">
+			<div class="images">
+				<img src="img/people/user1.jpg" alt="">
+			</div>
+			<h5>Павел Дуров</h5>
+			<small>Минск</small>
+			</a>
+			<a href="" class="comment-work"><span>6</span> Коментариев</a>
+			</div>
+		</div>
+	
+		<div class="work">
+			<h2>ФОТО Дня</h2>
+			<div class="images">
+				<img src="img/Rectangle%203.jpg" alt="">
+			</div>
+			<div class="footer-work">
+			<a href="">
+			<div class="images">
+				<img src="img/people/user1.jpg" alt="">
+			</div>
+			<h5>Павел Дуров</h5>
+			<small>Минск</small>
+			</a>
+			<a href="" class="comment-work"><span>6</span> Коментариев</a>
+			</div>
+		</div>
+	</div>
 </div>
+<!--Photo Day End-->
+<!--Slider-->
+<div class="slider">
+	<div class="container">
+		<h2>Видеографы</h2>
+		<div class="slider-run">
+			<div class="user">
+			<div class="images">
+				<img src="img/Rectangle%203.1.jpg" alt="">
+			</div>
+			<div class="username">
+				<h5>алексей вильма</h5>
+				<small>Минск</small>
+			</div>
+			</div>
+			<div class="user">
+			<div class="images">
+				<img src="img/people/user1.jpg" alt="">
+			</div>
+			<div class="username">
+				<h5>алексей вильма</h5>
+				<small>Минск</small>
+			</div>
+			</div>
+			<div class="user">
+			<div class="images">
+				<img src="img/people/user1.jpg" alt="">
+			</div>
+			<div class="username">
+				<h5>алексей вильма</h5>
+				<small>Минск</small>
+			</div>
+			</div>
+			<div class="user">
+			<div class="images">
+				<img src="img/people/user1.jpg" alt="">
+			</div>
+			<div class="username">
+				<h5>алексей вильма</h5>
+				<small>Минск</small>
+			</div>
+			</div>
+			<div class="user">
+			<div class="images">
+				<img src="img/people/user1.jpg" alt="">
+			</div>
+			<div class="username">
+				<h5>алексей вильма</h5>
+				<small>Минск</small>
+			</div>
+			</div>
+			<div class="user">
+			<div class="images">
+				<img src="img/001.jpg" alt="">
+			</div>
+			<div class="username">
+				<h5>алексей вильма</h5>
+				<small>Минск</small>
+			</div>
+			</div>
+			<div class="user">
+			<div class="images">
+				<img src="img/people/user1.jpg" alt="">
+			</div>
+			<div class="username">
+				<h5>алексей вильма</h5>
+				<small>Минск</small>
+			</div>
+			</div>
+			<div class="user">
+			<div class="images">
+				<img src="img/people/user1.jpg" alt="">
+			</div>
+			<div class="username">
+				<h5>алексей вильма</h5>
+				<small>Минск</small>
+			</div>
+			</div>
+			<div class="user">
+			<div class="images">
+				<img src="img/people/user1.jpg" alt="">
+			</div>
+			<div class="username">
+				<h5>алексей вильма</h5>
+				<small>Минск</small>
+			</div>
+			</div>
+			<div class="user">
+			<div class="images">
+				<img src="img/people/user1.jpg" alt="">
+			</div>
+			<div class="username">
+				<h5>алексей вильма</h5>
+				<small>Минск</small>
+			</div>
+			</div>
+			<div class="user">
+			<div class="images">
+				<img src="img/people/user1.jpg" alt="">
+			</div>
+			<div class="username">
+				<h5>алексей вильма</h5>
+				<small>Минск</small>
+			</div>
+			</div>
+			<div class="user">
+			<div class="images">
+				<img src="img/people/user1.jpg" alt="">
+			</div>
+			<div class="username">
+				<h5>алексей вильма</h5>
+				<small>Минск</small>
+			</div>
+			</div>
+		</div>
+	</div>
+</div>
+<!--Slider End-->
+<!--Video Day-->
+<div class="top-work">
+	<div class="container">
+		<div class="work">
+			<h2>Видео недели</h2>
+			<div class="images">
+				<iframe src="https://www.youtube.com/embed/nBYZpsbu9ds" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			</div>
+			<div class="footer-work">
+			<a href="">
+			<div class="images">
+				<img src="img/people/user1.jpg" alt="">
+			</div>
+			<h5>Павел Дуров</h5>
+			<small>Минск</small>
+			</a>
+			<a href="" class="comment-work"><span>6</span> Коментариев</a>
+			</div>
+		</div>
+	
+		<div class="work">
+			<h2>Видео Дня</h2>
+			<div class="images">
+				<iframe src="https://www.youtube.com/embed/cIyVNoY3_L4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			</div>
+			<div class="footer-work">
+			<a href="">
+			<div class="images">
+				<img src="img/people/user1.jpg" alt="">
+			</div>
+			<h5>Павел Дуров</h5>
+			<small>Минск</small>
+			</a>
+			<a href="" class="comment-work"><span>6</span> Коментариев</a>
+			</div>
+		</div>
+	</div>
+</div>
+<!--Video Day End-->
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="js/slick.min.js"></script>
-<script>
-$(document).ready(function(){
-  $('.slider-run').slick({
-  slidesToShow: 9,
-  slidesToScroll: 5,
-  responsive: [
-    {
-      breakpoint: 1670,
-      settings: {
-        slidesToShow: 7,
-        slidesToScroll: 3,
-      }
-    },
-    {
-      breakpoint: 1320,
-      settings: {
-        slidesToShow: 6,
-        slidesToScroll: 2
-      }
-    },
-    {
-      breakpoint: 1120,
-      settings: {
-        slidesToShow: 5,
-        slidesToScroll: 2
-      }
-    },
-    {
-      breakpoint: 970,
-      settings: {
-        slidesToShow: 4,
-        slidesToScroll: 2
-      }
-    },
-    {
-      breakpoint: 820,
-      settings: {
-        slidesToShow: 3,
-        slidesToScroll: 2
-      }
-    },
-    {
-      breakpoint: 640,
-      settings: {
-        slidesToShow: 2,
-        slidesToScroll: 2
-      }
-    },
-    {
-      breakpoint: 480,
-      settings: {
-        slidesToShow: 1,
-        slidesToScroll: 1
-      }
-    }
-  ]
-  });
-});
-</script>
+<script src="js/slider.js"></script>
 </body>
 </html>
