--- a/index.html
+++ b/index.html
@@ -414,7 +414,150 @@
 	</div>
 </div>
 <!--Video Day End-->
-
+<!--Slider-->
+<div class="slider">
+	<div class="container">
+		<h2>Ведущие</h2>
+		<div class="slider-run">
+			<div class="user">
+			<div class="images">
+				<img src="img/para.jpg" alt="">
+			</div>
+			<div class="username">
+				<h5>алексей вильма</h5>
+				<small>Минск</small>
+			</div>
+			</div>
+			<div class="user">
+			<div class="images">
+				<img src="img/people/user1.jpg" alt="">
+			</div>
+			<div class="username">
+				<h5>алексей вильма</h5>
+				<small>Минск</small>
+			</div>
+			</div>
+			<div class="user">
+			<div class="images">
+				<img src="img/people/user1.jpg" alt="">
+			</div>
+			<div class="username">
+				<h5>алексей вильма</h5>
+				<small>Минск</small>
+			</div>
+			</div>
+			<div class="user">
+			<div class="images">
+				<img src="img/people/user1.jpg" alt="">
+			</div>
+			<div class="username">
+				<h5>алексей вильма</h5>
+				<small>Минск</small>
+			</div>
+			</div>
+			<div class="user">
+			<div class="images">
+				<img src="img/people/user1.jpg" alt="">
+			</div>
+			<div class="username">
+				<h5>алексей вильма</h5>
+				<small>Минск</small>
+			</div>
+			</div>
+			<div class="user">
+			<div class="images">
+				<img src="img/001.jpg" alt="">
+			</div>
+			<div class="username">
+				<h5>алексей вильма</h5>
+				<small>Минск</small>
+			</div>
+			</div>
+			<div class="user">
+			<div class="images">
+				<img src="img/people/user1.jpg" alt="">
+			</div>
+			<div class="username">
+				<h5>алексей вильма</h5>
+				<small>Минск</small>
+			</div>
+			</div>
+			<div class="user">
+			<div class="images">
+				<img src="img/people/user1.jpg" alt="">
+			</div>
+			<div class="username">
+				<h5>алексей вильма</h5>
+				<small>Минск</small>
+			</div>
+			</div>
+			<div class="user">
+			<div class="images">
+				<img src="img/people/user1.jpg" alt="">
+			</div>
+			<div class="username">
+				<h5>алексей вильма</h5>
+				<small>Минск</small>
+			</div>
+			</div>
+			<div class="user">
+			<div class="images">
+				<img src="img/people/user1.jpg" alt="">
+			</div>
+			<div class="username">
+				<h5>алексей вильма</h5>
+				<small>Минск</small>
+			</div>
+			</div>
+			<div class="user">
+			<div class="images">
+				<img src="img/people/user1.jpg" alt="">
+			</div>
+			<div class="username">
+				<h5>алексей вильма</h5>
+				<small>Минск</small>
+			</div>
+			</div>
+			<div class="user">
+			<div class="images">
+				<img src="img/people/user1.jpg" alt="">
+			</div>
+			<div class="username">
+				<h5>алексей вильма</h5>
+				<small>Минск</small>
+			</div>
+			</div>
+		</div>
+	</div>
+</div>
+<!--Slider End-->
+<div class="info">
+	<div class="container">
+		<div class="info-head">
+			<h3>iMARRIED.today — крупный портал для свадебных фотографов, видеографов, ведущих и молодоженов.</h3>
+		</div>
+		<div class="info-down">
+			<p><b>Для молодоженов</b><br>
+Хотите выбрать дорогостоящего или напротив бюджетного фотографа для свадебной фотосъемки? Не знаете, какому оператору доверить создание свадебного фильма?Наш портал собрал в одном месте профессиональных фотографов и видеооператоов из разных городов Беларуси. Мы упрощаем ваш поиск, предлагая не одного определенного мастера, а готовые портфолио более тысячи специалистов, чтобы вы смогли выбрать для себя лучшего. Поиск фотографов и видеоператоров на свадьбу на нашем сайте настроен по городам с готовыми историями. Без регистрации вы можете смотреть цены и номера телефонов абсолютно всех специалистов!
+<br>
+<br>
+<b>Для фотографов и видеографов</b><br>
+Регистрация на нашем сайте - бесплатна! Наш сайт является крупнейшим порталом Беларуси и стран ближнего зарубежья. Ежедневно мы выбираем лучшее фото и еженедельно — видео со свадеб и публикуем их на главной странице. У нас есть собственный рейтинг оценки профессиональных навыков фотографов и операторов. Регистрируйтесь и размещайте ваши работы, пусть их по достоинству оценят! Делитесь мнением с вашими коллегами, общайтесь на нашем форуме, участвуйте в наших конкурсах и выигрывайте ценные призы!</p>
+		</div>
+	</div>
+</div>
+<footer>
+	<div class="container footer">
+	<div class="copiring">
+		<a href="#">imarried.today</a>
+	</div>
+		<ul>
+			<li><a href="#">Правила сайта</a></li>
+			<li><a href="#">Обратная связь</a></li>
+			<li><a href="#">Реклама на сайте</a></li>
+		</ul>
+	</div>
+</footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="js/slick.min.js"></script>
 <script src="js/slider.js"></script>
