--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title style="background: black">iMARRIED | Главная</title>
 	<link rel="stylesheet" href="css/icon/flaticon-icon.css">
+<!--	<link rel="stylesheet" href="css/icon-flat/flaticon.css">-->
 	<link rel="stylesheet" href="css/message/flaticon.css">
 <!--	<link rel="stylesheet" href="css/arrow/flaticon.css">-->
 	<link rel="stylesheet" href="css/arrow2/flaticon.css">
@@ -558,6 +559,53 @@
 		</ul>
 	</div>
 </footer>
+<div class="lightbox">
+	<div class="overlay"></div>
+		<figure>
+			<div class="images">
+				<img src="img/001.jpg" alt="">
+			</div>
+			<div class="container">
+				<div class="lightbox-title">
+					<h4>Оля & Броник</h4>
+					<div class="info-content">
+						<small class="date">Опубликовано 2 июня 2017 г. в 1:21, <a href="#">Ливин Греем</a></small>
+						<span class="likes">134<i class="flaticon-like-1"></i></span>
+						<span class="views">1254</span><i class="flaticon-view"></i>
+					</div>
+				</div>
+				<div class="lightbox-body">
+					<h4>Комментарии</h4>
+					<div class="comments">
+						<li>
+							<ul>
+								<a href="">
+								<span class="user">
+									<div class="images">
+									<img src="img/people/user1.jpg" alt="">
+								</div>
+								<span class="user-name">
+									<h4>Павел Дуров</h4>
+									<small>Минск</small>
+								</span>
+								<small class="date">10 месяцев назад</small>
+								</span>
+								</a>
+							<div class="comment">
+									<p>Динамичненько. Работы капец, видимо, проделал.</p>
+									<div class="info-content">
+										<small class="answer">ответить</small>
+										<span class="likes">134<i class="flaticon-like-1"></i></span>
+									</div>
+								</div>
+							</ul>
+						</li>
+					</div>
+				</div>
+				<textarea name="" placeholder="Написать комментарий"></textarea>
+			</div>
+		</figure>
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="js/slick.min.js"></script>
 <script src="js/slider.js"></script>
