--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title style="background: black">iMARRIED | Главная</title>
 	<link rel="stylesheet" href="css/icon/flaticon-icon.css">
 <!--	<link rel="stylesheet" href="css/icon-flat/flaticon.css">-->
@@ -34,6 +35,23 @@
 					</li>
 					<li>
 						<a href="#">Молодожёны</a>
+					</li>
+				</menu>
+				<menu class="mobile-menu">
+					<li>
+						<a href="#"><i class="flaticon-chat-37"></i></a>
+					</li>
+					<li>
+						<a href="#"><i class="flaticon-chat-37"></i></a>
+					</li>
+					<li>
+						<a href="#"><i class="flaticon-chat-37"></i></a>
+					</li>
+					<li>
+						<a href="#"><i class="flaticon-chat-37"></i></a>
+					</li>
+					<li>
+						<a href="#"><i class="flaticon-chat-37"></i></a>
 					</li>
 				</menu>
 <!--
