--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/slick-theme.css">
 	<link rel="stylesheet" href="css/slick.css">
+	<script src="https://unpkg.com/react@16/umd/react.development.js"></script>
+	<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+	<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 </head>
 <body>
 <header>
@@ -399,9 +402,9 @@
 <div class="top-work">
 	<div class="container">
 		<div class="work">
-			<h2>Видео недели</h2>
+			<h2>Видео месяца</h2>
 			<div class="images">
-				<iframe src="https://www.youtube.com/embed/nBYZpsbu9ds" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+				<img src="img/Rectangle%203.1.jpg" alt="">
 			</div>
 			<div class="footer-work">
 			<a href="">
@@ -416,9 +419,9 @@
 		</div>
 	
 		<div class="work">
-			<h2>Видео Дня</h2>
+			<h2>Видео недели</h2>
 			<div class="images">
-				<iframe src="https://www.youtube.com/embed/cIyVNoY3_L4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+				<img src="img/Rectangle%203.1.jpg" alt="">
 			</div>
 			<div class="footer-work">
 			<a href="">
@@ -431,6 +434,7 @@
 			<a href="" class="comment-work"><span>6</span> Коментариев</a>
 			</div>
 		</div>
+
 	</div>
 </div>
 <!--Video Day End-->
