--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/slick-theme.css">
 	<link rel="stylesheet" href="css/slick.css">
+	<link rel="stylesheet" href="css/swiper.min.css">
 	<script src="https://unpkg.com/react@16/umd/react.development.js"></script>
 	<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 	<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+	
+	  <style>
+
+  </style>
+	
 </head>
 <body>
 <header>
@@ -570,6 +576,31 @@
 		</div>
 	</div>
 </div>
+
+  <div class="swiper-container">
+    <div class="swiper-wrapper">
+   <div class="user swiper-slide">
+   <a href="">
+			<div class="images">
+				<img src="img/people/user1.jpg" alt="">
+			</div>
+			<div class="username">
+				<h5>алексей вильма</h5>
+				<small>Минск</small>
+			</div>
+			</a>
+			</div>
+      <div class="swiper-slide active" style="background-image:url(img/people/user1.jpg)"></div>
+      <div class="swiper-slide" style="background-image:url(img/people/user1.jpg)"></div>
+      <div class="swiper-slide" style="background-image:url(img/people/user1.jpg)"></div>
+      <div class="swiper-slide" style="background-image:url(img/people/user1.jpg)"></div>
+      <div class="swiper-slide" style="background-image:url(img/people/user1.jpg)"></div>
+      <div class="swiper-slide" style="background-image:url(img/people/user1.jpg)"></div>
+    </div>
+    <!-- Add Pagination -->
+    <div class="swiper-pagination"></div>
+  </div>
+
 <footer>
 	<div class="container footer">
 	<div class="copiring">
@@ -662,5 +693,27 @@
 <script src="js/slider.js"></script>
 <script src="js/animate.js"></script>
 <script src="js/myjs.js"></script>
+<script src="js/swiper.min.js"></script>
+<script>
+	$(document).ready(function () {
+		var Swipers = new Swiper ('.swiper-container', {
+      effect: 'coverflow',
+      grabCursor: true,
+      centeredSlides: true,
+      slidesPerView: 'auto',
+      freeMode: true,
+      coverflowEffect: {
+        rotate: 30,
+        stretch: 0,
+        depth: 10,
+        modifier: 1,
+        slideShadows : false,
+      },
+      pagination: {
+        el: '.swiper-pagination',
+      },
+    });
+	});
+	</script>
 </body>
 </html>
